# typeddict

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  setup.yml
script/: check.py  upload.py
tests/: test_pydantic.py  test_version.py
typeddict/: __init__.py  _pydantic.py  fields.py
