[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "Use `TypedDict` replace pydantic definitions."
license = "Apache-2.0"
name = "typeddict"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/abersheeran/typeddict"
repository = "https://github.com/abersheeran/typeddict"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "typeddict"},
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=4.3.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

flake8 = "*"

pytest = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
